# cprofile-analyzer

./: README.md  pyproject.toml
src/cprofile_analyzer/: __init__.py  analyze.py  cli.py
tests/: test_smoke.py
