[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cprofile-analyzer"
version = "0.1.0"
description = "Analyze cProfile .prof dumps (cum/self/callers/callees)"
readme = "README.md"
license = { text = "LGPL-3.0-or-later" }
requires-python = ">=3.8"
authors = [{ name = "oldrepublicwizard" }]
dependencies = [

]

[project.scripts]
cprofile-analyzer = "cprofile_analyzer.cli:main"

[project.urls]
Homepage = "https://github.com/oldrepublicwizard/cprofile-analyzer"
Repository = "https://github.com/oldrepublicwizard/cprofile-analyzer"

[tool.setuptools.packages.find]
where = ["src"]
